--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "split-type": "^0.3.4",
     "swiper": "^8.4.7",
