--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
+    "react-slideshow-image": "^4.3.0",
+    "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
     "swiper": "^8.4.7",
     "web-vitals": "^2.1.4"
