--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
     "swiper": "^8.4.7",
+    "vcard-creator": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
