--- a/src/projects.json
+++ b/src/projects.json
@@ -16,13 +16,13 @@
   },
   {
     "mainImage": "/projects/ge-healthcare-arab-health-2023/main.png",
-    "description": "Rotating Platform GE Healthcare at the Arab Health 2023.  We developed a grand rotating platform to enhance the product reveal of the GE Healthcare at the Arab Health Exhibition 2023. The reveal moment demanded attention in the exhibition, becoming the focal point and an impactful event experience  ",
+    "description": "We developed a grand rotating platform to enhance the product reveal of the GE Healthcare at the Arab Health Exhibition 2023. The reveal moment demanded attention in the exhibition, becoming the focal point and an impactful event experience  ",
     "images": ["/projects/ge-healthcare-arab-health-2023/1.png","/projects/ge-healthcare-arab-health-2023/2.png","/projects/ge-healthcare-arab-health-2023/3.png"],
     "title": "GE Healthcare - Arab Health 2023"
   },
   {
     "mainImage": "/projects/jotun-paints/main.png",
-    "description": "Introducing an interactive floor at the Jotun Paints event, we aimed to captivate attendees by allowingthem to walk on a virtual desert, leavingdistinctive footprints. Our technology simplifies the connection between brands and their audience, enhancing your event ambiance  ",
+    "description": "Introducing an interactive floor at the Jotun Paints event, we aimed to captivate attendees by allowing them to walk on a virtual desert, leaving distinctive footprints. Our technology simplifies the connection between brands and their audience, enhancing your event ambience  ",
     "images": ["/projects/jotun-paints/1.png","/projects/jotun-paints/2.png"],
     "title": "Jotun Paints"
   },
@@ -34,12 +34,12 @@
   },
   {
     "mainImage": "/projects/tahakom-gitex-2023/main.png",
-    "description": "At Gitex Global 2023, Tahakom Stand ambience and design was advanced with the  Kinetic Wall—a dynamic display of LED tiles protruding to form captivating patterns, featuring Tahakom Branded animations. This eye-catching centerpiece became a focal point, drawing in intrigued visitors. \n\n High-definition facades further enriched the ambiance, showcasing compelling content for a visually captivating experience. To foster engagement, we introduced custom-programmed interactive screens and sliding displays, seamlessly presenting Tahakom's services and products. \n\n The synergy of advanced hardware and innovative programming delivered a distinct and immersive experience, positioning Tahakom at the forefront of the technology exhibition. ",
+    "description": "At Gitex Global 2023, Tahakom Stand ambience and design was advanced with the  Kinetic Wall—a dynamic display of LED tiles protruding to form captivating patterns, featuring Tahakom branded animations. This eye-catching centerpiece became a focal point, drawing in intrigued visitors. \n\n High-definition facades further enriched the ambiance, showcasing compelling content for a visually captivating experience. To foster engagement, we introduced custom-programmed interactive screens and sliding displays, seamlessly presenting Tahakom's services and products. \n\n The synergy of advanced hardware and innovative programming delivered a distinct and immersive experience, positioning Tahakom at the forefront of the technology exhibition. ",
     "images": ["/projects/tahakom-gitex-2023/1.png","/projects/tahakom-gitex-2023/2.png","/projects/tahakom-gitex-2023/3.png"],
     "title": "TAHAKOM - GITEX 2023"
   },
   {
-    "mainImage": "/projects/dxb-live-power-interactive-cop28-event/main.png",
+    "mainImage": "/projects/COP28 Conference/main.png",
     "description": "For the COP 28 conference, we undertook the challenge of delivering a visually pleasing and engaging art installation with informative content. Focusing on the power of kinetics, we conceptualized and developed the Dynamic Motion Wall from scratch within a constrained timeframe. Successfully deploying this installation not only met the event's prestige but also showcased our industry-leading engineering skills, reinforcing our commitment to delivering innovative solutions.",
     "images": ["/projects/dxb-live-power-interactive-cop28-event/1.png","/projects/dxb-live-power-interactive-cop28-event/2.png"],
     "title": "DXB Live - Power Interactive - COP28 Event"
@@ -63,7 +63,7 @@
     "title": "Saudi Downtown Company - Cityscape Global  event "
   },
   {
-    "mainImage": "/projects/site-blackhat/main.png",
+    "mainImage": "/projects/site-blackhat MEA/main.png",
     "description": "At GITEX 2023, SITE experienced innovation with the Interactive Dynamic Wheel—an intuitive solution where users could effortlessly select topics by moving the wheel, triggering LED Screens to display relevant information. In addition, we introduced interactive screens with custom programming, facilitating the seamless presentation of SITE's services. ",
     "images": ["/projects/site-blackhat/1.png","/projects/site-blackhat/2.png","/projects/site-blackhat/3.png"],
     "title": "SITE - blackhat"
