--- a/src/projects.json
+++ b/src/projects.json
@@ -64,7 +64,7 @@
   },
   {
     "mainImage": "/projects/site-blackhat MEA/main.png",
-    "description": "At GITEX 2023, SITE experienced innovation with the Interactive Dynamic Wheel—an intuitive solution where users could effortlessly select topics by moving the wheel, triggering LED Screens to display relevant information. In addition, we introduced interactive screens with custom programming, facilitating the seamless presentation of SITE's services. ",
+    "description": "We delivered multiple interactive screens with custom programming for SITE. These screens presented SITE's services and products in a modern, engaging manner, captivating booth visitors. Our solution successfully enhanced engagement, leaving a lasting impression and driving SITE's marketing objectives forward. ",
     "images": ["/projects/site-blackhat/1.png","/projects/site-blackhat/2.png","/projects/site-blackhat/3.png"],
     "title": "SITE - blackhat"
   }
