--- a/src/projects.json
+++ b/src/projects.json
@@ -39,7 +39,7 @@
     "title": "TAHAKOM - GITEX 2023"
   },
   {
-    "mainImage": "/projects/COP28 Conference/main.png",
+    "mainImage": "/projects/dxb-live-power-interactive-cop28-event/main.png",
     "description": "For the COP 28 conference, we undertook the challenge of delivering a visually pleasing and engaging art installation with informative content. Focusing on the power of kinetics, we conceptualized and developed the Dynamic Motion Wall from scratch within a constrained timeframe. Successfully deploying this installation not only met the event's prestige but also showcased our industry-leading engineering skills, reinforcing our commitment to delivering innovative solutions.",
     "images": ["/projects/dxb-live-power-interactive-cop28-event/1.png","/projects/dxb-live-power-interactive-cop28-event/2.png"],
     "title": "DXB Live - Power Interactive - COP28 Event"
@@ -63,7 +63,7 @@
     "title": "Saudi Downtown Company - Cityscape Global  event "
   },
   {
-    "mainImage": "/projects/site-blackhat MEA/main.png",
+    "mainImage": "/projects/site-blackhat/main.png",
     "description": "We delivered multiple interactive screens with custom programming for SITE. These screens presented SITE's services and products in a modern, engaging manner, captivating booth visitors. Our solution successfully enhanced engagement, leaving a lasting impression and driving SITE's marketing objectives forward. ",
     "images": ["/projects/site-blackhat/1.png","/projects/site-blackhat/2.png","/projects/site-blackhat/3.png"],
     "title": "SITE - blackhat"
