--- a/src/projects.json
+++ b/src/projects.json
@@ -74,7 +74,7 @@
         "tag": ""
       }
     ],
-    "title": "DXB Live - Power Interactive - COP28 Event"
+    "title": "COP28 Conference"
   },
   {
     "mainImage": {
@@ -96,7 +96,7 @@
       { "src": "/projects/shomul-at-cityscape/1.png", "tag": "" },
       { "src": "/projects/shomul-at-cityscape/2.png", "tag": "" }
     ],
-    "title": "SHOMUL AT CITYSCAPE"
+    "title": "Shomoul AT CITYSCAPE"
   },
   {
     "mainImage": {
