--- a/src/projects.json
+++ b/src/projects.json
@@ -14,6 +14,7 @@
     "images": [
       { "src": "projects/site-gitex/1.png", "tag": "" },
       { "src": "projects/site-gitex/2.png", "tag": "" }
+      { "src": "projects/site-gitex/3.png", "tag": "" }
     ],
     "title": "SITE - GITEX 2023"
   },
@@ -114,7 +115,7 @@
         "tag": ""
       }
     ],
-    "title": "Saudi Downtown Company - Cityscape Global  event "
+    "title": "Saudi Downtown Company - Cityscape Global event "
   },
   {
     "mainImage": { "src": "/projects/site-blackhat/main.png", "tag": "" },
