--- a/src/projects.json
+++ b/src/projects.json
@@ -97,7 +97,7 @@
       { "src": "/projects/shomul-at-cityscape/1.png", "tag": "" },
       { "src": "/projects/shomul-at-cityscape/2.png", "tag": "" }
     ],
-    "title": "Shomoul AT CITYSCAPE"
+    "title": "Shomoul - AT CITYSCAPE"
   },
   {
     "mainImage": {
