--- a/src/projects.json
+++ b/src/projects.json
@@ -4,7 +4,7 @@
     "description": "At Cityscape in Saudi Arabia, our emphasis on innovative presentation solutions was evident. The rotating product showcase, featuring an interactive tablet interface and a sleek transparent OLED, allowed users to effortlessly select products displayed on a rotating platform. \n\n This engaging experience, complemented by captivating digital holographic visuals, showcased detailed product information, enhancing the overall presentation. Our commitment to innovation also extended to practical solutions, including hanging LED cubes for the Zain booth executed with precision within demanding timelines. ",
     "images": [
       { "src": "/projects/zain-city-scape-ksa/1.png", "tag": "" },
-      { "src": "/projects/zain-city-scape-ksa/2.png", "tag": "" }
+      { "src": "/projects/zain-city-scape-ksa/2.png", "tag": "" },
       { "src": "/projects/zain-city-scape-ksa/3.png", "tag": "" }
     ],
     "title": "Zain - CityScape KSA"
