--- a/src/projects.json
+++ b/src/projects.json
@@ -61,17 +61,17 @@
   },
   {
     "mainImage": {
-      "src": "/projects/COP28 Conference/main.png",
+      "src": "/projects/dxb-live-power-interactive-cop28-event/main.png",
       "tag": ""
     },
     "description": "For the COP 28 conference, we undertook the challenge of delivering a visually pleasing and engaging art installation with informative content. Focusing on the power of kinetics, we conceptualized and developed the Dynamic Motion Wall from scratch within a constrained timeframe. Successfully deploying this installation not only met the event's prestige but also showcased our industry-leading engineering skills, reinforcing our commitment to delivering innovative solutions.",
     "images": [
       {
-        "src": "/projects/COP28 Conference/1.png",
+        "src": "/projects/dxb-live-power-interactive-cop28-event/1.png",
         "tag": ""
       },
       {
-        "src": "/projects/COP28 Conference/2.png",
+        "src": "/projects/dxb-live-power-interactive-cop28-event/2.png",
         "tag": ""
       }
     ],
