--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
     "react-slideshow-image": "^4.3.0",
+    "react-toastify": "^10.0.4",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
